Don't crash when opening a filter mask properties dialog for group layers

BUG:319855