krita/ui/kis_mask_manager.cc
@@ -34,6 +34,7 @@
 #include "kis_view2.h"
 #include <kis_layer.h>
 #include <kis_clone_layer.h>
+#include <kis_group_layer.h>
 #include <kis_filter_mask.h>
 #include <kis_transparency_mask.h>
 #include <kis_selection_mask.h>
@@ -278,25 +279,16 @@ void KisMaskManager::maskProperties()
             return;
 
 
-        KisPaintDeviceSP dev = layer->paintDevice();
-
+        KisPaintDeviceSP dev = layer->original();
         if (!dev) {
-            // Check whether this is a clone layer
-            KisCloneLayer *cloneLayer = dynamic_cast<KisCloneLayer*>(layer.data());
-            if (cloneLayer) {
-                dev = cloneLayer->original();
-            }
+            return;
         }
-
-
-        qDebug() << "Dev:" << dev << "Layer" << layer->name();
 
         KisDlgAdjLayerProps dlg(layer, mask, dev, m_view, mask->filter().data(), mask->name(), i18n("Effect Mask Properties"), m_view, "dlgeffectmaskprops");
 
         KisSafeFilterConfigurationSP configBefore(mask->filter());
         Q_ASSERT(configBefore);
         QString xmlBefore = configBefore->toXML();
-
 
         if (dlg.exec() == QDialog::Accepted) {
 
